--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div class="controls">
       <label>
         WS URL:
-        <input id="wsUrl" type="text" value="ws://localhost:9000/ws/logbook" />
+        <input id="wsUrl" type="text" value="ws://192.168.170.1:9000/ws/logbook"/>
       </label>
       <button id="btnConnect">Conectar</button>
       <button id="btnDisconnect" class="secondary" disabled>Desconectar</button>
